# dct-carver

./: .gitignore  AUTHORS  HACKING  Makefile  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.in  intltool-update
help/: Makefile  Makefile.in
help/en/: Makefile  Makefile.in  index.html
help/images/: Makefile  Makefile.in
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  alloc.h  dct.c  dct.h  interface.c  interface.h  main.c  main.h  render.c  render.h
src/fft2d/: Makefile  Makefile.am  Makefile.in
src/fft2d/.deps/: alloc.Po  fftsg.Po  fftsg2d.Po  shrtdct.Po
